hub/cluster/syncthing/instance.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: syncthing.hub.samcday.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: syncthing.hub.samcday.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: certificate
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
  namespace: syncthing
spec:
  hostnames:
    - syncthing.hub.samcday.com
  parentRefs:
    - name: syncthing
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: instance-generic
          port: 80
